tests/types/errors/list_concat_type_mismatch.mochi
let xs = [1, 2]
let ys = ["a", "b"]
let zs = xs + ys
